Rename selection width as width

--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -34,7 +34,7 @@
                   model="ctrl.model"
                   model-controller="ctrl"
                   show="ctrl.show"
-                  selection-width="ctrl.selectionWidth">
+                  width="ctrl.selectionWidth">
       </class-view>
 
       <predicate-view ng-if="ctrl.selection.isPredicate()"
@@ -42,7 +42,7 @@
                       model="ctrl.model"
                       model-controller="ctrl"
                       show="ctrl.show"
-                      selection-width="ctrl.selectionWidth">
+                      width="ctrl.selectionWidth">
       </predicate-view>
 
       <divider ng-if="ctrl.show === 1" selection-width="ctrl.selectionWidth"></divider>
