Adjust buttons width when selection width changes and floating

--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -10,7 +10,7 @@
 
   <div ng-hide="ctrl.show === 2">
     <div float="top-actions-placeholder">
-      <editable-entity-buttons context="ctrl.model" editable-controller="ctrl.editableController">
+      <editable-entity-buttons context="ctrl.model" editable-controller="ctrl.editableController" width="ctrl.editableController.width">
         <div ng-transclude="buttons"></div>
       </editable-entity-buttons>
     </div>
