Rename attribute class as data-class

--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -29,7 +29,7 @@
 
     <div class="model-panel--right">
       <class-view ng-if="ctrl.selection.isClass()"
-                  class="ctrl.selection"
+                  data-class="ctrl.selection"
                   open-property-id="ctrl.openPropertyId"
                   model="ctrl.model"
                   model-controller="ctrl"
