Add backface visibility hidden when floating
Seems to fix performance issues. https://benfrain.com/improving-css-performance-fixed-position-elements/

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -40,17 +40,21 @@ input[type=checkbox][disabled] + span {
 
 .floating {
   position: fixed;
+  backface-visibility: hidden;
 
   &.always {
     position: fixed !important;
+    backface-visibility: hidden !important;
   }
 
   &.no-floating {
     position: inherit !important;
+    backface-visibility: inherit !important;
   }
 
   @media (max-width: $screen-md-max) {
     position: inherit;
+    backface-visibility: inherit !important;
   }
 }
 
