--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -40,6 +40,7 @@ input[type=checkbox][disabled] + span {
 
 .floating {
   position: fixed;
+  will-change: scroll-position;
   backface-visibility: hidden;
 
   &.always {
