Copy id to clipboard implemented
Closes #494

--- a/src/components/form/editable.html
+++ b/src/components/form/editable.html
@@ -1,5 +1,5 @@
 <div class="editable-wrap form-group">
-  <editable-label data-title="ctrl.title" input-id="ctrl.inputId" required="ctrl.required"></editable-label>
+  <editable-label data-title="ctrl.title" input-id="ctrl.inputId" required="ctrl.required" clipboard="ctrl.clipboard"></editable-label>
   <div ng-show="ctrl.isEditing()" ng-transclude></div>
 
   <div ng-if="!ctrl.isEditing()" class="content">
