--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -16,7 +16,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <editable data-title="{{ctrl.class.normalizedType + ' id' | capitalize}}" link="ctrl.linkToIdClass()" context="ctrl.model">
+    <editable data-title="{{ctrl.class.normalizedType + ' id' | capitalize}}" link="ctrl.linkToIdClass()" context="ctrl.model" clipboard="ctrl.class.id.uri">
       <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.id" ng-disabled="!ctrl.class.inUnstableState" />
     </editable>
 
