Move hint to directive attribute

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -46,9 +46,12 @@ input[type=checkbox][disabled] + span {
   text-decoration: line-through;
 }
 
+[float] {
+  will-change: scroll-position;
+}
+
 .floating {
   position: fixed;
-  will-change: scroll-position;
   backface-visibility: hidden;
 
   &.always {
