--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -5,7 +5,7 @@
 
   <div class="bottom">
     <div class="model-panel--left">
-      <uib-tabset active="ctrl.activeTab" float always="true">
+      <uib-tabset active="ctrl.activeTab" float always="true" snap="true">
         <uib-tab ng-repeat="tab in ctrl.tabs">
           <uib-tab-heading>
             <i ng-class="tab.glyphIconClass"></i><p>{{tab.type | translate}}</p>
