Fix problem with downloading exports
With html5 mode target self is needed to bypass angular routing.

Closes #535

--- a/src/components/common/export.html
+++ b/src/components/common/export.html
@@ -5,6 +5,6 @@
     <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name"><a target="_blank" ng-href="{{download.hrefRaw}}">{{download.name | translate}}</a></li>
     <li role="separator" class="divider"></li>
     <li role="menuitem" class="dropdown-header" translate>Download</li>
-    <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name"><a download="{{download.filename}}" ng-href="{{download.href}}">{{download.name | translate}}</a></li>
+    <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name"><a target="_self" download="{{download.filename}}" ng-href="{{download.href}}">{{download.name | translate}}</a></li>
   </ul>
 </div>
