--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -15,7 +15,7 @@
   <editable-root-class ng-if="ctrl.model.isOfType('profile')" model="ctrl.model"></editable-root-class>
 
   <non-editable data-title="Prefix" value="ctrl.model.prefix" context="ctrl.model"></non-editable>
-  <non-editable data-title="Namespace" value="ctrl.model.namespace" context="ctrl.model"></non-editable>
+  <non-editable data-title="Namespace" value="ctrl.model.namespace" context="ctrl.model" clipboard="ctrl.model.namespace"></non-editable>
 
   <h4 translate>Additional information</h4>
 
