--- a/src/components/form/nonEditable.html
+++ b/src/components/form/nonEditable.html
@@ -1,8 +1,9 @@
 <div ng-if="ctrl.item.displayValue" class="editable-wrap" ng-style="ctrl.style">
-  <editable-label data-title="ctrl.title" clipboard="ctrl.clipboard"></editable-label>
+  <editable-label data-title="ctrl.title"></editable-label>
   <div class="content">
     <a ng-if="ctrl.item.href" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
     <a ng-if="ctrl.item.onClick" ng-click="ctrl.item.onClick()">{{ctrl.item.displayValue}}</a>
     <span ng-if="!ctrl.item.href && !ctrl.item.onClick">{{ctrl.item.displayValue}}</span>
+    <clipboard text="ctrl.clipboard"></clipboard>
   </div>
 </div>
