--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h4 class="pull-left">{{ctrl.predicate.normalizedType + ' information' | capitalize | translate}}</h4>
 
-    <button ng-if="ctrl.isEditing()"
+    <button ng-if="ctrl.isEditing() && !ctrl.predicate.unsaved"
             type="button"
             class="btn btn-default pull-right"
             style="margin-left: 5px"
@@ -54,27 +54,31 @@
 
 <subject-view entity="ctrl.predicate" model="ctrl.model" is-editing="ctrl.isEditing"></subject-view>
 
-<h4 translate>Additional information</h4>
+<div ng-if="!ctrl.predicate.unsaved">
 
-<div class="row">
-  <div class="col-md-6">
-    <non-editable data-title="Created at" value="ctrl.predicate.createdAt" context="ctrl.model"></non-editable>
-  </div>
-  <div class="col-md-6">
-    <non-editable data-title="Modified at" value="ctrl.predicate.modifiedAt" context="ctrl.model"></non-editable>
-  </div>
-</div>
+  <h4 translate>Additional information</h4>
 
-<div class="row">
-  <div class="col-md-12">
-    <editable data-title="Editorial note" context="ctrl.model">
-      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.predicate.editorialNote"></textarea>
-    </editable>
+  <div class="row">
+    <div class="col-md-6">
+      <non-editable data-title="Created at" value="ctrl.predicate.createdAt" context="ctrl.model"></non-editable>
+    </div>
+    <div class="col-md-6">
+      <non-editable data-title="Modified at" value="ctrl.predicate.modifiedAt" context="ctrl.model"></non-editable>
+    </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-md-12">
-    <usage-panel entity="ctrl.predicate" context="ctrl.model"></usage-panel>
+  <div class="row">
+    <div class="col-md-12">
+      <editable data-title="Editorial note" context="ctrl.model">
+        <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.predicate.editorialNote"></textarea>
+      </editable>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <usage-panel entity="ctrl.predicate" context="ctrl.model"></usage-panel>
+    </div>
+  </div>
+
 </div>
