Add missing translate

--- a/src/components/editor/propertyPredicateView.html
+++ b/src/components/editor/propertyPredicateView.html
@@ -25,6 +25,6 @@
 </div>
 
 <div ng-if="ctrl.predicate === null && !ctrl.loading">
-  <span class="pull-left">Predicate information not found</span>
+  <span class="pull-left" translate>Predicate information not found</span>
   <button-with-options options="ctrl.changeActions" class="pull-right" disabled="!ctrl.property.inUnstableState"></button-with-options>
 </div>
