--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -39,6 +39,16 @@
                 </select>
               </div>
             </div>
+
+            <div class="form-group">
+              <label translate>Match to content</label>
+
+              <div class="input-group input-group-md">
+                <div class="checkbox" ng-repeat="matcher in ctrl.contentMatchers">
+                  <label><input class="" type="checkbox" checklist-model="ctrl.contentExtractors" checklist-value="matcher.extractor" /> {{matcher.name | translate}}</label>
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
