--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -34,6 +34,10 @@ $brand-accent-dark:     #375e97;
   display: none !important;
 }
 
+span.highlight {
+  font-weight: bold;
+}
+
 img.svg-icon {
   width: 14px;
 }
@@ -1417,7 +1421,7 @@ a.accordion-toggle {
   margin: 0;
   p {
     font-size: small;
-    padding-left: 20px;
+    padding-left: 27px;
     margin-bottom: 0;
   }
 }
