--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -42,7 +42,7 @@
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
           <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
-            <h5>{{searchResult | translateLabel: ctrl.model}} <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span></h5>
+            <h5><highlight text="searchResult | translateLabel: ctrl.model" search="ctrl.searchText"></highlight> <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span></h5>
             <p>{{searchResult.vocabulary | translateLabel: ctrl.model}} <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small></p>
           </search-results>
         </div>
