--- a/src/components/advancedSearchModal.html
+++ b/src/components/advancedSearchModal.html
@@ -30,8 +30,8 @@
         <div ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</div>
         <div ng-repeat="searchResult in ctrl.searchResults track by searchResult.id"
              class="search-result" ng-click="ctrl.selectSearchResult(searchResult)" key-control-selection>
-          <div><i ng-class="searchResult.glyphIconClass"></i><h5><highlight text="searchResult | translateLabel: ctrl.context" search="ctrl.searchText"></highlight></h5></div>
-          <p><highlight text="searchResult.comment | translateValue: ctrl.context" search="ctrl.searchText"></highlight></p>
+          <div><i ng-class="searchResult.glyphIconClass"></i><h5><highlight text="searchResult.label" context="ctrl.context}}" search="ctrl.searchText"></highlight></h5></div>
+          <p><highlight text="searchResult.comment" context="ctrl.context" search="ctrl.searchText"></highlight></p>
         </div>
       </div>
     </div>
