--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -71,8 +71,8 @@
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
           <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
-            <div><i ng-class="searchResult.glyphIconClass"></i><h5><highlight text="searchResult | translateLabel: ctrl.model" search="ctrl.searchText"></highlight></h5></div>
-            <p><highlight text="searchResult.comment | translateValue: ctrl.model" search="ctrl.searchText"></highlight></p>
+            <div><i ng-class="searchResult.glyphIconClass"></i><h5><highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight></h5></div>
+            <p><highlight text="searchResult.comment" context="ctrl.model" search="ctrl.searchText"></highlight></p>
             <p>{{searchResult.definedBy | translateLabel: ctrl.model}} <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small></p>
           </search-results>
         </div>
