--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -24,8 +24,8 @@
             <li ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</li>
             <li ng-repeat="searchResult in ctrl.searchResults" ng-click="ctrl.selectSearchResult(searchResult)" key-control-selection>
               <i ng-class="searchResult.glyphIconClass"></i>
-              <span ng-class="{link: searchResult.iowUrl}"><highlight text="searchResult | translateLabel: ctrl.context" search="ctrl.searchText"></highlight></span>
-              <p><highlight text="searchResult.comment | translateValue: ctrl.context" search="ctrl.searchText"></highlight></p>
+              <span ng-class="{link: searchResult.iowUrl}"><highlight text="searchResult.label" context="ctrl.context" search="ctrl.searchText"></highlight></span>
+              <p><highlight text="searchResult.comment" context="ctrl.context" search="ctrl.searchText"></highlight></p>
             </li>
           </ul>
 
