--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -36,8 +36,8 @@
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
         <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-          <h5><highlight text="searchResult | translateLabel: ctrl.model" search="ctrl.searchText"></highlight></h5>
-          <p>{{searchResult.namespace}}</p>
+          <h5><highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight></h5>
+          <p ng-bind-html="searchResult.namespace | highlight: ctrl.searchText"></p>
         </search-results>
       </div>
     </div>
