--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -830,6 +830,11 @@ modal-body {
     background-color: #555555;
     background-color: rgba(85, 85, 85, 0.9);
     border-color: #555555;
+    max-width: 400px;
+
+    p {
+      font-size: large;
+    }
 
     .arrow {
       border-left-color: #555555;
