--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -15,44 +15,16 @@
 
           <p ng-hide="ctrl.onlySelection" translate>Class search or create info</p>
           <p ng-show="ctrl.onlySelection" translate>Class search info</p>
-          <div class="input-group input-group-lg">
-            <input autofocus type="text" class="form-control" placeholder="{{'search class' | translate}}"
-                   ng-model="ctrl.searchText"
-                   ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
-                   key-control="ctrl.searchResults" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-          </div>
+
+          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search class'"></text-filter>
 
           <div class="search-panel">
             <span class="title" translate>Filter results</span>
-            <div class="form-group">
-              <label for="model" translate>Defined by</label>
-              <div class="input-group input-group-md">
-                <div class="selectContainer">
-                  <select id="model" class="form-control" ng-model="ctrl.showModel"
-                          ng-options="ctrl.isThisModel(model)
-                                    ? ('Assigned to this ' + ctrl.model.normalizedType | translate)
-                                    : (model | translateLabel: ctrl.model)
-                                    for model in ctrl.models">
-                    <option value="" translate>All models</option>
-                  </select>
-                </div>
-              </div>
 
-              <div class="checkbox" ng-hide="ctrl.onlySelection">
-                <label><input type="checkbox" ng-model="ctrl.showProfiles">{{'Show classes defined in profiles' | translate}}</label>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label translate>Match to content</label>
-
-              <div class="input-group input-group-md">
-                <div class="checkbox" ng-repeat="matcher in ctrl.contentMatchers">
-                  <label><input class="" type="checkbox" checklist-model="ctrl.contentExtractors" checklist-value="matcher.extractor" /> {{matcher.name | translate}}</label>
-                </div>
-              </div>
-            </div>
+            <model-filter search-controller="ctrl" type="class" model="ctrl.model" default-show="ctrl.defaultToCurrentModel ? ctrl.model : null"></model-filter>
+            <profile-filter search-controller="ctrl" only-selection="ctrl.onlySelection"></profile-filter>
+            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
+            <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
           </div>
         </div>
 
