--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -7,13 +7,8 @@
       <div class="frontpage-panel">
         <div class="iow-panel-heading"><h3 translate>Search</h3></div>
         <div class="frontpage-panel__body">
-          <div class="input-group input-group-lg">
-            <input autofocus type="text" class="form-control" placeholder="{{'search descriptions' | translate}}"
-                   ng-model="ctrl.searchText"
-                   ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
-                   key-control="ctrl.searchResults" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-          </div>
+
+          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search descriptions'"></text-filter>
 
           <div style="display: inline-block; width: 100%">
             <span class="advanced-search link" ng-click="ctrl.openAdvancedSearch()" translate>Advanced search</span>
