--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -8,13 +8,7 @@
 
           <model-language-chooser context="ctrl.model"></model-language-chooser>
 
-          <div class="input-group input-group-lg">
-            <input autofocus type="text" class="form-control" placeholder="{{'search reference data' | translate}}"
-                   ng-model="ctrl.searchText"
-                   ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
-                   key-control="ctrl.searchResults" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-          </div>
+          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search reference data'"></text-filter>
 
           <div class="search-panel">
             <span class="title" translate>Filter results</span>
@@ -40,15 +34,8 @@
               </div>
             </div>
 
-            <div class="form-group">
-              <label translate>Match to content</label>
-
-              <div class="input-group input-group-md">
-                <div class="checkbox" ng-repeat="matcher in ctrl.contentMatchers">
-                  <label><input class="" type="checkbox" checklist-model="ctrl.contentExtractors" checklist-value="matcher.extractor" /> {{matcher.name | translate}}</label>
-                </div>
-              </div>
-            </div>
+            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
+            <content-filter search-controller="ctrl" content-extractors="ctrl.contentExtractors" content-matchers="ctrl.contentMatchers"></content-filter>
           </div>
 
         </div>
