--- a/src/components/model/searchVocabularyModal.html
+++ b/src/components/model/searchVocabularyModal.html
@@ -4,26 +4,14 @@
   <modal-body>
     <div class="row">
       <div class="col-md-6">
-        <div class="input-group input-group-lg">
-          <input autofocus type="text" class="form-control" placeholder="{{'search vocabulary' | translate}}"
-                 ng-model="ctrl.searchText"
-                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
-                 key-control="ctrl.searchResults" />
-          <i class="glyphicon glyphicon-search form-control-feedback"></i>
-        </div>
+
+        <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search vocabulary'"></text-filter>
 
         <div class="search-panel">
           <span class="title" translate>Filter results</span>
 
-          <div class="form-group">
-            <label translate>Match to content</label>
-
-            <div class="input-group input-group-md">
-              <div class="checkbox" ng-repeat="matcher in ctrl.contentMatchers">
-                <label><input class="" type="checkbox" checklist-model="ctrl.contentExtractors" checklist-value="matcher.extractor" /> {{matcher.name | translate}}</label>
-              </div>
-            </div>
-          </div>
+          <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
+          <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
         </div>
       </div>
 
